--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_messaging: ^14.2.1
   google_maps_flutter: ^2.2.1
   email_validator: ^2.1.17
+  auto_size_text: ^3.0.0
   
 
 dev_dependencies:
